# SPDX-FileCopyrightText: 2025 - 2026 Eli Array Minkoff
#
# SPDX-License-Identifier: 0BSD

[package]
name = "intcode"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "intcode_ascii"

[[bin]]
name = "ial-dis"
required-features = [ "disasm", "clap" ]

[[bin]]
name = "ial-as"
required-features = [ "asm", "clap", "ariadne" ]

[dependencies]
ariadne = { version = "0.6.0", features = ["auto-color"], optional = true }
chumsky = { version = "0.12.0", optional = true }
clap = { version = "4.5.54", features = ["derive"], optional = true }
itertools = { version = "0.14.0" }

[features]
default = [ "asm", "disasm" ]
disasm = [ "asm", "dep:chumsky" ]
asm = [ "dep:chumsky" ]
ariadne = [ "dep:ariadne" ]
clap = [ "dep:clap" ]

[dev-dependencies]
either = "1.15.0"
