# SPDX-FileCopyrightText: 2025 - 2026 Eli Array Minkoff
#
# SPDX-License-Identifier: 0BSD

[package]
name = "intcode"
version = "0.1.0-pre-alpha"
edition = "2024"

[[bin]]
name = "intcode_ascii"

[[bin]]
name = "ial-dis"
required-features = [ "bin_deps" ]

[[bin]]
name = "ial-as"
required-features = [ "bin_deps" ]

[dependencies]
ariadne = { version = "0.6.0", features = ["auto-color"], optional = true }
clap = { version = "4.5.54", features = ["derive"], optional = true }
chumsky = { version = "0.12.0" }
itertools = { version = "0.14.0" }
either = "1.15.0"
flate2 = "1.1.8"

[features]
default = [ ]
bin_deps = [ "dep:ariadne", "dep:clap" ]
